@@ -2,6 +2,12 @@
 
         * gui/modules/keymouselistener.c,
           gui/modules/dwellmouselistener.c:  
+	  Backing out this fix.  It is not needed.
+
+2005-11-22  Brian Cameron <Brian.Cameron@sun.com>
+
+        * gui/modules/keymouselistener.c,
+          gui/modules/dwellmouselistener.c:  
           Fix build on Darwin.  Fixes bug #322085.
           Patch provided by dmacks@netspace.org.
 
